--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -170,7 +170,7 @@
     <div class="container">
       <p>
         <a href="/api/friends">API Friends Link</a> |
-        <a href="https://github.com/HFarah11">GitHub Repo</a>
+        <a href="https://github.com/HFarah11/friendFinder">GitHub Repo</a>
       </p>
     </div>
   </footer>
